add mvn plugin  v 1.7

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
 
     </dependencies>
+    
     <build>
         <plugins>
             <plugin>
@@ -37,6 +38,14 @@
                     <url>http://localhost:8080/manager/text</url>
                     <server>TomcatServer</server>
                     <path>/jadmin</path>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
         </plugins>
