--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,19 @@
             <version>8.0.18</version>
         </dependency>
 
+            <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
+          <dependency>
+    <scope>compile</scope>
+    <groupId>javax.servlet.jsp.jstl</groupId>
+    <artifactId>jstl-api</artifactId>
+    <version>1.2</version>
+</dependency>
+
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
 
     </dependencies>
     
